[workspace]
members = [ 
    "devtools",
    "query",
]
resolver = "2"
exclude = ["example"]

[workspace.dependencies]
leptos = "0.6"
cfg-if = "1"
js-sys = { version = "0.3" }
gloo-timers = { version = "0.3", features = ["futures"] }
tokio = { version = "1", features = ["time"] }
slotmap = "1"
futures-channel = "0.3"
futures = "0.3"
web-sys = "0.3"
