[package]
name = "leptos_query_devtools"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
cfg-if = { workspace = true } 
js-sys = { workspace = true }
leptos = { workspace = true }
leptos_query = { path = "../query"}
web-sys = { version = "0.3", features = ["DomRect"] }
wasm-bindgen = { version = "0.2" }

# [features]
# hydrate = []

# [package.metadata.docs.rs]
# all-features = true