[package]
name = "leptos_query_devtools"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
cfg-if = { workspace = true } 
leptos = { workspace = true }
leptos_query = { path = "../query" }
js-sys = { workspace = true, optional = true }
web-sys = { version = "0.3", features = ["DomRect"], optional = true }
wasm-bindgen = { version = "0.2", optional = true }

[features]
csr = ["web-sys", "wasm-bindgen", "js-sys"]
show_devtools = []

# [package.metadata.docs.rs]
# all-features = true