[package]
name = "leptos_query_devtools"
version = "0.1.0"
edition = "2021"
authors = ["Nico Burniske"]
description = "Devtools for Leptos Query"
keywords = ["leptos"]
license = "MIT"
readme = "README.md"
repository = "https://github.com/nicoburniske/leptos_query/"

[dependencies]
cfg-if = { workspace = true } 
leptos = { workspace = true }
leptos_query = { version = "0.5", path = "../query" }
js-sys = { workspace = true, optional = true }
web-sys = { workspace = true, features = ["DomRect"], optional = true }
wasm-bindgen = { version = "0.2", optional = true }

[features]
csr = ["web-sys", "wasm-bindgen", "js-sys"]
force = []

# [package.metadata.docs.rs]
# all-features = true