[package]
name = "start-csr"
version = "0.1.0"
edition = "2021"
authors = ["Nico Burniske <nicoburniske@gmail.com>"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
leptos = { version = "0.6", features = ["csr", "nightly"] }
leptos_meta = { version = "0.6", features = ["csr", "nightly"] }
leptos_router = { version = "0.6", features = ["csr", "nightly"] }
console_log = "1"
log = "0.4"
console_error_panic_hook = "0.1"
leptos_query = { path = "../../query", features = ["csr", "local_storage", "indexed_db"]}
leptos_query_devtools = { path = "../../devtools", features = ["csr", "force"]}
gloo-timers = "0.3.0"
serde = { version = "1.0" }
reqwest = { version = "0.11.24", features = ["json"] }
leptos-use = "0.10.3"

# utils
# strum = { version = "0.25", features = ["derive", "strum_macros"] }
# strum_macros = "0.25"


[dev-dependencies]
wasm-bindgen = "0.2"
wasm-bindgen-test = "0.3"
web-sys = { version = "0.3", features = ["Document", "Window"] }


[profile.release]
opt-level = 'z'
lto = true
codegen-units = 1
panic = "abort"
